TUI Added (working) console cleaning for mac users